# AuditTrace-AI

./: .dockerignore  .editorconfig  .env.ci  .env.dev-real-llm.example  .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.tests  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.data-compat.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  contract-sync.yml  e2e-compose.yml  e2e.yml  integration-content-control.yml  publish.yml  structurizr-validate.yml
bruno/: .gitignore  README.md
bruno/audittrace/: README.md  bruno.json
certs/: generate-certs.sh
charts/audittrace/: .helmignore  Chart.yaml  values-local.yaml  values.yaml
docs/: ADR-014-python-package-structure.md  ADR-014.2-logging-dependency-injection.md  ADR-014.3-makefile-venv.md  ADR-014.4-observability-logging-otel.md  ADR-018-four-layer-memory-port.md  ADR-019-chromadb-server-mode.md  ADR-020-postgresql-server-databases.md  ADR-021-tls-mkcert-traefik.md  ADR-021.2-langfuse-sibling-stack.md  ADR-022-keycloak-realm.md  ADR-023-jwt-validation-jwks-caching.md  ADR-024-proxy-passthrough-and-langfuse-trace-decoupling.md  ADR-025-memory-as-tools.md  ADR-026-multi-user-identity.md  ADR-027-minio-object-storage.md  ADR-028-observability-aggregation-stack.md  ADR-029-audit-trail-completeness.md  ADR-030-session-summarizer.md  ADR-032-oauth2-device-flow.md  ADR-033-three-audience-error-envelope.md  ADR-034-long-running-generation.md  ADR-035-package-rename.md  ADR-037-agent-tool-audit-boundary.md  ADR-038-memory-sync-protocol.md  ADR-041-product-boundary-and-dependencies.md  ADR-042-oidc-authorization-code-pkce.md  ADR-043-vault-as-sole-secret-store.md  ADR-044-external-idp-federation.md  ADR-045-laptop-first-no-lan-hardcodes.md  ADR-046-async-chat-persistence.md  ADR-047-server-side-embedding.md  ADR-048-ingestion-content-control.md  ADR-049-test-evidence-and-reconstructibility-gate.md  ADR-050-pdf-ingestion-tier-b.md  ADR-052-pades-trust-store-and-taxonomy.md  ADR-053-swiss-federal-tsl-and-composite-trust-store.md  ADR-054-pades-as-of-signing-time-validation.md  ADR-055-eliminate-version-pin-litany.md  ADR-056-pdf-tier-c-batch.md  ADR-057-scan-control-broker-rabbitmq.md  (+11 more)
docs/architecture/: ADR-047-implementation-plan.md  BRAINSTORM-memory-as-tools.md  DRIFT-20260425.md  DRIFT-20260426.md  b7-docker-compose-revive-plan.md  model-topology.md  pdf-ingestion-gaps.md  pdf-ingestion-status.md  product-and-dependencies.md  sequence-async-persist.md  sequence-chat-completions.md  sequence-context-build.md  sequence-memory-tool-call.md  sequence-minio-authz.md  sequence-oauth2-flow.md  sequence-observability-flow.md  sequence-summariser-cycle.md  sequence-trust-store-refresh.md  sequence-vault-injection.md  workspace.dsl
docs/backlog/: 01-iter-and-capture-too-large.md  02-langgraph-step-counter-process-global.md  03-tests-fragile-on-french-string.md  04-session-id-collision-risk.md  05-empty-stub-files.md  06-dev-mode-bind-mount-source.md  07-test-db-models-sawarning.md  08-reasoning-model-thinking-overrun-on-title-generation.md  09-langfuse-output-undefined-on-error-span.md  10-summariser-preflight-token-overflow.md  11-rls-test-suite-needs-postgres-superuser-or-grant.md  12-make-sync-requirements-and-precommit-hook.md  13-pades-trust-store-provisioning.md  README.md  (+2 more)
keycloak/: realm-audittrace.json  realm-sovereign-ai.json
rabbitmq/: rabbitmq.conf
scripts/: audittrace-dlq  audittrace-login  audittrace-opencode-proxy.Caddyfile  audittrace-opencode-proxy.service  audittrace-pod-reaper.service  audittrace-pod-reaper.sh  audittrace-vault-auto-unseal.service  audittrace-vault-auto-unseal.sh  check-anti-affinity-deadlock.sh  check-commit-evidence.sh  check-contracts-sync.sh  check-istiod-readiness.sh  check-no-private-content.sh  check-per-file-coverage.py  check-vault-injector.sh  configure-project.py  deploy-preflight.sh  detect-k3s-bridge.sh  entrypoint.sh  eval-memory-modes.py  generate-client-keys.sh  healthcheck.sh  index-chromadb.py  init-audittrace-app-role.sh  init-keycloak-db.sql  init-sovereign-app-role.sh  install-audittrace-trust.sh  langfuse-cleanup-noise-traces.py  mint-dev-jwt.sh  opencode-wrapper.sh  phase4-airplane-test.sh  post-deploy-verify.sh  refresh-openai-spec.sh  seed-memory.py  setup-human-user.sh  setup-idp-federation.sh  setup-langfuse.sh  setup-memory-scopes.sh  setup-observability.sh  setup-secrets.sh  (+7 more)
secrets/: docker_hub_pat.txt.example  minio_audittrace_app_password.txt.example  minio_audittrace_app_user.txt.example  minio_content_control_password.txt.example  minio_content_control_user.txt.example  rabbitmq_content_control_password.txt.example  rabbitmq_content_control_user.txt.example  rabbitmq_erlang_cookie.txt.example  rabbitmq_password.txt.example  rabbitmq_user.txt.example
tests/: __init__.py  conftest.py  test_admin_routes.py  test_adr047_server_side_embedding.py  test_alembic.py  test_async_persist.py  test_audit_assessment.py  test_audit_schema_drift.py  test_audit_tool_calls.py  test_audittrace_login_defaults.py  test_auth.py  test_auto_unseal_k3s_wait.sh  test_chart_drift_guards.py  test_chart_labels_stable.py  test_chart_production_secret_hygiene.py  test_chart_rendering.py  test_chat_failure_audit.py  test_chat_long_running.py  test_chat_proxy.py  test_compose_drift.py  test_config.py  test_content_control_contract.py  test_context_builder.py  test_conversational_service.py  test_coverage_gate.py  test_cross_user_isolation.py  test_db_factory.py  test_db_models.py  test_dependencies.py  test_dockerfile.py  test_docs_drift.py  test_episodic_service.py  test_grafana_dashboards.py  test_httpx_peer_service_map.py  test_identity.py  test_integrity.py  test_keycloak_issuer_extras_chart.py  test_llm_stub_chart.py  test_llm_stub_server.py  test_log_call_user_id.py  (+45 more)
tmp/: eval-memory-modes-20260414T202935Z.jsonl
traefik/: dynamic.yml  traefik.yml
webui/: README.md  index.html  serve.py
(+269 files in other folders)
