[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audittrace-ai"
version = "1.6.2"
description = "AuditTrace-AI: sovereign AI memory server with 4-tier memory architecture and OAuth2 authentication"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Luis Filipe de Sousa", email = "ldesousapro@allaboutdata.eu"},
]
maintainers = [
    {name = "Luis Filipe de Sousa", email = "ldesousapro@allaboutdata.eu"},
]
keywords = ["ai", "memory", "oauth2", "sovereign", "llama", "chromadb", "audittrace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # langchain and langchain-community dropped in ADR-025 — the repo only
    # used them passively via `from langchain_core.documents import Document`.
    # langchain-core is retained explicitly so the dataclass import keeps
    # working without pulling the full Langchain + langchain-community tree.
    "langchain-core>=0.1.0",
    # chromadb 1.x — provides AsyncHttpClient (memory-server uses the async
    # Chroma client so vector I/O never blocks the event loop). The .venv is
    # already on 1.5.7 and the suite is green on it.
    "chromadb>=1.5,<2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "langfuse>=4.0.0,<5.0.0",
    "openai>=1.12.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.25",
    # asyncpg = production async Postgres driver. psycopg2-binary kept for
    # Alembic + the sync RLS oracle test (out-of-band of the request loop).
    # aiosqlite = async SQLite for the in-memory test engine.
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "aiosqlite>=0.19.0",
    "redis>=5.0.0",
    # ADR-057 — RabbitMQ AMQP client for the scan-control broker
    # (PR-B3 ScanRequestPublisher + PR-B4 verdict/audit consumers).
    # ADR-046 chat persistence stays on redis-py via Redis Streams.
    "aio-pika>=9.4.0",
    # ADR-006 — shared object-storage abstraction. v0.1.0 ships
    # S3ObjectStorageProvider ABC + MinIO + AWS S3 backends (IRSA-native
    # via botocore's default credential chain). `minio` stays as a direct
    # dep because the shared package re-uses it for the MinIO backend AND
    # for graceful migration of the existing call sites — drop it in a
    # follow-up once the grep audit confirms zero direct references.
    "audittrace-object-storage @ git+https://github.com/lfdesousa/audittrace-object-storage.git@v0.1.1",
    "minio>=7.2.0",
    "pymupdf>=1.24.0",
    # pyhanko: PAdES / PDF signature validation (gap-inventory item #12).
    # Detect-and-record only in v1 — never reject. Adds ~10 MB
    # to image size (cryptography, asn1crypto, pyhanko-certvalidator
    # transitively). pyhanko-certvalidator declares the trust-context
    # for OCSP/CRL chains. The [etsi] extra adds the EU LOTL walker
    # used by EuLotlTrustStoreBuilder (ADR-052 §3 / §6); pyhanko
    # ships the LOTL bootstrap signing keys so no out-of-band cert
    # vendoring is required. ImportError-guarded at the call site
    # so an air-gapped customer using StaticTrustStoreBuilder can
    # omit the extra and still get a working memory-server. See
    # docs/architecture/pdf-ingestion-gaps.md §2.3.
    # The [async-http] extra brings aiohttp (transitive dep of the
    # etsi LOTL walker — pyhanko's [etsi] extra does NOT pull aiohttp
    # on its own, verified 2026-05-09 against pyhanko 0.35.1). Both
    # extras must be co-installed for EuLotlTrustStoreBuilder.
    "pyhanko[etsi,async-http]>=0.35.1",
    "pyhanko-certvalidator>=0.26.0",
    # pytesseract: tier-B item #1 — OCR for scanned pages. Python
    # binding only; the actual `tesseract` binary + language packs
    # (eng+deu+fra+ita) are installed via apt in the Dockerfile.
    # Graceful degradation: if the binary is missing at runtime,
    # `_ocr_render_page` emits a `no_text_layer` warning rather than
    # crashing — keeps unit tests green on hosts that don't have
    # tesseract installed locally.
    "pytesseract>=0.3.10",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-logging>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-urllib3>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "fakeredis>=2.30.0",
    "httpx>=0.25.0",
    "ruff>=0.15.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
    "pre-commit>=3.6.0",
    "types-redis>=4.6.0.20241004",
    # PyYAML — used by tests/test_version_drift.py to parse
    # charts/audittrace/Chart.yaml. Already a transitive dep via
    # pyhanko/etsi but declared explicitly so the dev environment
    # is self-contained (per make sync-requirements).
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/lfdesousa/AuditTrace-AI"
Documentation = "https://github.com/lfdesousa/AuditTrace-AI#readme"
Repository = "https://github.com/lfdesousa/AuditTrace-AI"
Issues = "https://github.com/lfdesousa/AuditTrace-AI/issues"

[project.scripts]
audittrace = "audittrace.server:main"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term --cov-report=xml --cov-fail-under=90"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["audittrace"]
branch = true
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",       # Pyflakes
    "I",       # isort
    "N",       # pep8-naming
    "UP",      # pyupgrade
    "YTT",     # flake8-2020
]
ignore = ["E501"]  # Line length handled by black

[tool.ruff.lint.isort]
known-first-party = ["audittrace"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.black]
line-length = 88
target-version = ["py312"]

[[tool.mypy.overrides]]
module = "audittrace.routes.chat"
# Langfuse @observe is an untyped decorator; Request generic requires starlette stubs
disable_error_code = ["misc", "type-arg"]

[[tool.mypy.overrides]]
module = "audittrace.auth"
# FastAPI Request generic requires starlette stubs
disable_error_code = ["type-arg"]

[[tool.mypy.overrides]]
module = "scripts.*"
ignore_errors = true
